force-app/main/default/objects/Form__c/fields/Booster_Dose_Date__c.field-meta.xml
<CustomField>
    <fullName>Booster_Dose_Date__c</fullName>
    <label>Booster Dose Date</label>
    <type>Date</type>
</CustomField>