force-app/main/default/objects/Form__c/fields/First_Dose_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Dose_Date__c</fullName>
    <label>First Dose Date</label>
    <type>Date</type>
</CustomField>