force-app/main/default/objects/Form__c/fields/Second_Dose_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Dose_Date__c</fullName>
    <label>Second Dose Date</label>
    <type>Date</type>
</CustomField>