force-app/main/default/objects/Form__c/fields/Type_of_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Vaccine__c</fullName>
    <label>Type of Vaccine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covishield</fullName>
            </value>
            <value>
                <fullName>Covaxin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>