force-app/main/default/objects/Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_of_Vaccine__c</columns>
    <columns>Status__c</columns>
    <columns>Booster_Dose_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>